[gd_scene load_steps=42 format=3 uid="uid://cr0uyv1n1ofq5"]

[ext_resource type="PackedScene" uid="uid://bd0kheh641dqw" path="res://Scenes/Items/InteractableItem.tscn" id="1_t7jc2"]
[ext_resource type="Script" path="res://Scripts/CoffeeMachine.gd" id="2_rr5s8"]
[ext_resource type="Texture2D" uid="uid://b3hycmohlpfru" path="res://Sprites/Cafe/Items/CoffeeMachine.png" id="2_rrc8h"]
[ext_resource type="Texture2D" uid="uid://dlcgmi056q143" path="res://Sprites/Cafe/Items/CoffeeFill.png" id="4_2xaol"]
[ext_resource type="PackedScene" uid="uid://lmqi3wk7h3vg" path="res://Scenes/Items/MugHover.tscn" id="5_tlm00"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kog6"]
size = Vector2(6.85714, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdoce"]
size = Vector2(13.9286, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkhns"]
size = Vector2(322, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0mf8"]
atlas = ExtResource("4_2xaol")
region = Rect2(0, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntl3s"]
atlas = ExtResource("4_2xaol")
region = Rect2(0, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8w0m"]
atlas = ExtResource("4_2xaol")
region = Rect2(6, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_duj35"]
atlas = ExtResource("4_2xaol")
region = Rect2(12, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i4yh"]
atlas = ExtResource("4_2xaol")
region = Rect2(18, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6yml"]
atlas = ExtResource("4_2xaol")
region = Rect2(24, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbby7"]
atlas = ExtResource("4_2xaol")
region = Rect2(30, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubflk"]
atlas = ExtResource("4_2xaol")
region = Rect2(36, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7rra"]
atlas = ExtResource("4_2xaol")
region = Rect2(42, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1soi"]
atlas = ExtResource("4_2xaol")
region = Rect2(48, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_e00vd"]
atlas = ExtResource("4_2xaol")
region = Rect2(54, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1b6e"]
atlas = ExtResource("4_2xaol")
region = Rect2(60, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_urk6g"]
atlas = ExtResource("4_2xaol")
region = Rect2(66, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwo2u"]
atlas = ExtResource("4_2xaol")
region = Rect2(72, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7g57"]
atlas = ExtResource("4_2xaol")
region = Rect2(78, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssbcm"]
atlas = ExtResource("4_2xaol")
region = Rect2(84, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqx8e"]
atlas = ExtResource("4_2xaol")
region = Rect2(90, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcyuu"]
atlas = ExtResource("4_2xaol")
region = Rect2(96, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkb8b"]
atlas = ExtResource("4_2xaol")
region = Rect2(60, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlynf"]
atlas = ExtResource("4_2xaol")
region = Rect2(0, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2gs2"]
atlas = ExtResource("4_2xaol")
region = Rect2(6, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_07r17"]
atlas = ExtResource("4_2xaol")
region = Rect2(12, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp713"]
atlas = ExtResource("4_2xaol")
region = Rect2(18, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_kput1"]
atlas = ExtResource("4_2xaol")
region = Rect2(24, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vmv7"]
atlas = ExtResource("4_2xaol")
region = Rect2(30, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tjrc"]
atlas = ExtResource("4_2xaol")
region = Rect2(36, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1w0j"]
atlas = ExtResource("4_2xaol")
region = Rect2(42, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwcaa"]
atlas = ExtResource("4_2xaol")
region = Rect2(48, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb3nx"]
atlas = ExtResource("4_2xaol")
region = Rect2(54, 0, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lkbq"]
atlas = ExtResource("4_2xaol")
region = Rect2(60, 0, 6, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_x17p8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0mf8")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntl3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8w0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duj35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i4yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6yml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbby7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubflk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7rra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1soi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e00vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1b6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urk6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwo2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7g57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssbcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqx8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcyuu")
}],
"loop": false,
"name": &"Filling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkb8b")
}],
"loop": true,
"name": &"Full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlynf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2gs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07r17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp713")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kput1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vmv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tjrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1w0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwcaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb3nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lkbq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2xf0s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_032ku"]

[node name="CoffeeMachine" instance=ExtResource("1_t7jc2")]
script = ExtResource("2_rr5s8")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_rrc8h")

[node name="Area2D5" type="Area2D" parent="." index="1"]
scale = Vector2(14, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5" index="0"]
position = Vector2(3.5, 4.08718e-07)
shape = SubResource("RectangleShape2D_8kog6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(-0.035714, 4.08718e-07)
shape = SubResource("RectangleShape2D_jdoce")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2" index="0"]
shape = SubResource("RectangleShape2D_mkhns")

[node name="Coffee" type="AnimatedSprite2D" parent="." index="4"]
visible = false
position = Vector2(-42, 21)
scale = Vector2(14, 14)
sprite_frames = SubResource("SpriteFrames_x17p8")
animation = &"Empty"

[node name="Coffee2" type="AnimatedSprite2D" parent="." index="5"]
visible = false
position = Vector2(56, 21)
scale = Vector2(14, 14)
sprite_frames = SubResource("SpriteFrames_x17p8")
animation = &"Empty"

[node name="Area2D3" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3" index="0"]
position = Vector2(-49, -49)
shape = SubResource("CircleShape2D_2xf0s")

[node name="Area2D4" type="Area2D" parent="." index="7"]
position = Vector2(48, -49)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4" index="0"]
shape = SubResource("CircleShape2D_032ku")

[node name="MugHover" parent="." index="8" instance=ExtResource("5_tlm00")]
position = Vector2(-42, 28)

[node name="MugHover2" parent="." index="9" instance=ExtResource("5_tlm00")]
position = Vector2(56, 28)

[connection signal="animation_finished" from="Coffee" to="." method="_on_coffee_animation_finished"]
[connection signal="animation_finished" from="Coffee2" to="." method="_on_coffee_2_animation_finished"]
[connection signal="input_event" from="Area2D3" to="." method="_on_area_2d_3_input_event"]
[connection signal="input_event" from="Area2D4" to="." method="_on_area_2d_4_input_event"]
[connection signal="mouse_entered" from="Area2D4" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D4" to="." method="_on_area_2d_mouse_exited"]
